--- a/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
+++ b/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
@@ -10,6 +10,15 @@
     cursor: pointer;
 }
 
+.provider-card:hover {
+    border-color: var(--highlight);
+}
+
+.provider-card--selected {
+    border-color: var(--highlight);
+    background-color: var(--highlight);
+}
+
 .provider-card__image{
     width: 100%;
     height: auto;
