jogos ao vivo e ajustes da home

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
@@ -20,9 +20,15 @@
                 <span>Ao Vivo</span>
             </a>
         </li>
-        <li class="bg-esportes-sports">
+        <li class="bg-promocoes">
             <a routerLink="/esportes/esports">
-                E-Sports
+                Promoções
+            </a>
+        </li>
+        <li class="bg-indique-ganhe">
+            <a routerLink="/esportes/esports">
+                Indique
+                <span>e Ganhe</span>
             </a>
         </li>
     </ul>
