--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -219,7 +219,7 @@
 .details-amount input {
     text-align: left !important;
     width: 66%;
-    margin: 12px 0 8px
+    margin: 12px 0 8px;
 }
 
 .details-amount label {
