jogar cassino apartir da home

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
@@ -10,23 +10,23 @@
             </a>
         </li>
         <li class="bg-cassino">
-            <a routerLink="/cassino/c/wall/todos">
+            <a routerLink="/casino">
                 Cassino
             </a>
         </li>
         <li class="bg-cassino-aovivo">
-            <a routerLink="/cassino/cl/wall-live/todos">
+            <a routerLink="/live-casino">
                 Cassino
                 <span>Ao Vivo</span>
             </a>
         </li>
         <li class="bg-promocoes">
-            <a routerLink="/esportes/esports">
+            <a routerLink="/promocao">
                 Promoções
             </a>
         </li>
         <li class="bg-indique-ganhe">
-            <a routerLink="/esportes/esports">
+            <a routerLink="/clientes/indique-ganhe">
                 Indique
                 <span>e Ganhe</span>
             </a>
