melhorias nas informacoes do indique e ganhe

--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.css
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.css
@@ -152,8 +152,9 @@
     margin-top: 10px;
 }
 
-.indique-ganhe-info a {
+a.link-highlight {
     color: var(--highlight);
+    cursor: pointer;
 }
 
 .link-indicacao-container {
