--- a/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
+++ b/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
@@ -1,6 +1,4 @@
 .provider-card {
-    width: 149px;
-    height: 66px;
     background-color: var(--header);
     border-radius: 5px;
     border: .5px solid #333333;
@@ -8,6 +6,16 @@
     justify-content: center;
     padding: 15px 30px;
     cursor: pointer;
+}
+
+.provider-card--inline {
+    width: 149px;
+    height: 66px;
+}
+
+.provider-card--filter {
+    width: 100%;
+    min-height: 100%;
 }
 
 .provider-card:hover {
@@ -25,7 +33,7 @@
 }
 
 @media only screen and (min-width: 1025px) {
-    .provider-card {
+    .provider-card--inline {
         width: calc((100vw / 7.5) - 16px);
         height: 78px;
     }
